# 42-Modules-Python

PY 00/ex2/: ft_harvest_total.py
PY 00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
PY 00/ex6/: ft_garden_summary.py
PY 00/ex7/: ft_seed_inventory.py
PY 01/ex0/: ft_garden_intro.py
PY 01/ex1/: ft_garden_data.py
PY 01/ex2/: ft_plant_growth.py
PY 01/ex3/: ft_plant_factory.py
PY 01/ex4/: ft_garden_security.py
PY 01/ex5/: ft_plant_types.py
PY 01/ex6/: ft_garden_analytics.py
PY 02/ex0/: ft_first_exception.py
PY 02/ex1/: ft_different_errors.py
PY 02/ex2/: ft_custom_errors.py
PY 02/ex3/: ft_finally_block.py
PY 02/ex4/: ft_raise_errors.py
PY 02/ex5/: ft_garden_management.py
PY 03/ex0/: ft_command_quest.py
PY 03/ex1/: ft_score_analytics.py
PY 03/ex2/: ft_coordinate_system.py
PY 03/ex3/: ft_achievement_tracker.py
PY 03/ex4/: ft_inventory_system.py
PY 03/ex5/: ft_data_stream.py
PY 03/ex6/: ft_analytics_dashboard.py
PY 04/ex0/: ft_ancient_text.py
PY 04/ex1/: ft_archive_creation.py
PY 04/ex2/: ft_stream_management.py
PY 04/ex3/: ft_vault_security.py
PY 04/ex4/: ft_crisis_response.py
PY 05/ex0/: stream_processor.py
PY 05/ex1/: data_stream.py
PY 05/ex2/: nexus_pipeline.py
PY 06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
PY 06/alchemy/: potions.py
PY 07/: battle.py  capacitor.py  tournament.py
PY 07/ex0/: creature.py  factory.py
PY 07/ex1/: __init__.py  capability.py  creature.py  factory.py
PY 08/ex1/: loading.py  pyproject.toml
(+13 files in other folders)
